<resources>
    <string name="app_name">திருக்குறள்</string>
    <string name="mv_urai">மு.வரதராசனார் உரை:</string>
    <string name="mk_urai">மு.கருணாநிதி உரை:</string>
    <string name="sp_urai">சாலமன் பாப்பையா உரை:</string>
    <string name="kural">குறள்:</string>
    <string name="kural_no">குறள் எண்-%d</string>
    <string name="favourites">பிடித்தவைகள்</string>
    <string name="settings">அமைப்புகள்</string>
    <string name="thirukural">திருக்குறள்</string>
    <string name="daily_one_kural">இன்றைய குறள்</string>
    <string name="new_notification_from_kural">திருக்குறளில் இருந்து புதிய அறிவிப்பு...</string>
    <string name="feedback">மின்னஞ்சல் மூலம் கருத்து அனுப்ப</string>
    <string name="rate_us">பிளேஸ்டோரில் செயலியை மதிப்பிட</string>
    <string name="share_app">இந்த செயலியை பகிர</string>
    <string name="search">குறள் தேடல்</string>
    <string name="search_hint">குறள் எண்/வார்த்தை</string>
    <string name="arathuppaal">அறத்துப்பால்</string>
    <string name="porutpaal">பொருட்பால்</string>
    <string name="kamathuppaal">காமத்துப்பால்</string>
    <string name="iyals">இயல்கள்</string>
    <string name="iyal">இயல்</string>
    <string name="athikarams">அதிகாரங்கள்</string>
    <string name="athikaram">அதிகாரம்</string>
    <string name="kurals">குறள்கள்</string>
    <string name="kural_explanation">குறள் விளக்கம்</string>
    <string name="wait">காத்திருக்கவும்</string>
    <string name="arathuppaal_desc">(நல்வழி, ஒழுங்கு, தருமத்தைப்பற்றிக் கூறுவதுமான பகுதி)</string>
    <string name="porutpaal_desc">(இவ்வுலகத்தில் உள்ள பொருட்களைப்பற்றிக் கூறுவதுமான பகுதி)</string>
    <string name="kamathuppaal_desc">(அன்பு, அறம், பொருள், வீடு என்ற வாழ்வின் நோக்கங்கள் பற்றிய கருத்துக்களை்பற்றிக் கூறுவதுமான பகுதி)</string>

    <!--Kural Not Found, Please search with valid word or number-->
    <string name="kural_not_found">குறள் கிடைக்கவில்லை, சரியான வார்த்தை அல்லது எண்ணைக் கொண்டு தேடவும்.</string>
    <string name="no_favorite_found">பிடித்தவைகளில் இதுவரை குறள் எதுவும் சேர்க்கப்படவில்லை! குறள் பட்டியலிலிருந்து பிடித்ததைச் சேர்க்கவும்.</string>

    <string name="notification_tuned_on">Notification turned ON</string>
    <string name="notification_tuned_off">Notification turned OFF</string>
    <string name="added_to_favorites">Successfully, Added to favorites</string>
    <string name="remove_from_favorites">Successfully, Removed from favorites</string>
    <string name="unable_to_add">Something went wrong!, Unable to add into favorites</string>
    <string name="unable_to_remove">Something went wrong!, Unable to remove from favorites</string>

    <string name="kural_no_eng">Kural No-%d</string>
    <string name="explanation">Explanation:</string>
    <string name="couplet">Couplet:</string>

    <string name="permission_required">Permission Required!</string>
    <string name="permission_required_desc">This app has feature to send daily one kural notification, Please enable notification permission in device settings.</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="not_now">Not Now</string>
    <string name="notification_info">This app has feature to send daily one kural notification, Please enable notification permission by clicking ok.</string>
    <string name="notification_granted_info">Permission granted for sending daily one kural notification.</string>

    <string name="ad_unit_id">ca-app-pub-8676882032589738/5807664758</string>

    <!--ACCESSIBILITY-->
    <string name="back">Back</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Add Favorite</string>
    <string name="home">Home</string>
    <string name="acc_search">Search</string>
    <string name="acc_favorties">Favorites</string>
    <string name="acc_settings">Settings</string>
</resources>